[package]
name = "no_cap"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
log = "0.4.29"
log4rs = { version = "1.4.0", features = ["file_appender"] }
reqwest = {version = "0.12.26", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
sodiumoxide = "0.2.7"
tokio = { version = "1.48.0", features = ["full"] }
