[package]
name = "no_cap"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.29"
log4rs = { version = "1.4.0", features = ["file_appender"] }
once_cell = "1.21.3"
reqwest = {version = "0.12.26", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
tower-http = { version = "0.6.8", features = ["cors"] }
sha2 = "0.10.9"
sodiumoxide = "0.2.7"
tokio = { version = "1.48.0", features = ["full"] }

